bearer token in swagger
